@@ -277,6 +277,7 @@ search.title=Search
 searchresult.notfound="{0}" ble ikke funnet i noen emner.
 searchresult.title=S\u00F8k etter "{0}"
 setup.caption.adminlogin=Admin user login
+setup.error.jdk=JAMWiki requires a minimum JDK version of {0}.  The current system is reporting JDK version {1}.
 setup.error.notrequired=System setup is already complete.  View the admin page to change settings.
 setup.error.upgrade=A new installation is being performed, but a JAMWiki database already exists.  If JAMWiki was previously installed, please use the upgrade process described in the UPGRADE.txt document.  If you continue with a new installation the existing database schema may not match the current JAMWiki version and errors will occur.  Press the continue button below only if you wish to continue with the new install.
 setup.title=Setup
